<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:shrinkColumns="*"
        android:stretchColumns="*"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="3"
                android:gravity="center_horizontal"
                android:text="@string/login_please_connect" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/login_user" />

            <EditText
                android:id="@+id/editTextLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:layout_span="2" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/login_ine" />

            <EditText
                android:id="@+id/editTextINE"
                android:layout_width="181dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberSigned"
                tools:layout_editor_absoluteX="75dp"
                tools:layout_editor_absoluteY="497dp"
                android:layout_span="2" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/login_password" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="181dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:layout_span="2" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRowCatcha"
            android:layout_width="318dp"
            android:layout_height="match_parent"
            android:visibility="gone">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Captcha: " />

            <EditText
                android:id="@+id/editTextCaptcha"
                android:layout_width="148dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:maxLength="6"
                android:maxLines="1"/>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="139dp"
                android:layout_height="match_parent"
                app:srcCompat="@android:drawable/toast_frame" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRowCatchaBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:visibility="gone">

            <Button
                android:id="@+id/buttonValidateCacha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="3"
                android:text="Valider" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRowConnect"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <Button
                android:id="@+id/buttonConnect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="3"
                android:text="@string/login_connect" />
        </TableRow>



    </TableLayout>

    <com.turtleforgaming.demoarena.GifAnimatedView
        android:id="@+id/GifImageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout">

        <Switch
            android:id="@+id/savePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_savepwd" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonReportBug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/report_bug"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>